Testing/TestCache/test39.txt
Error trace on line: 2, column: 5 in file "test39".
inl q = type (heapm <| dyn {a=1;b=2;c=3}) \/ (heapm <| dyn {a=1;b=2}) \/ (heap <| dyn (1,2,3))
    ^
Error trace on line: 3, column: 1 in file "test39".
match box q (heapm <| dyn {a=1;b=2;c=3}) |> dyn with
^
Error trace on line: 4, column: 3 in file "test39".
| {x with a} ->
  ^
Error trace on line: 9, column: 3 in file "test39".
| a,b,c -> a*b*c
  ^
Pattern miss error. The argument is var (layout_heap ([var (int64), var (int64), var (int64)]))
